fixed overflow

--- a/src/css/main/contact.scss
+++ b/src/css/main/contact.scss
@@ -1,6 +1,4 @@
 .contact__section {
-  //   position: sticky;
-  //   top: 0;
   width: 100vw;
   min-height: 40vh;
   padding: 0 5rem;
@@ -15,7 +13,7 @@
     display: inline-block;
     padding: 1rem;
     text-transform: uppercase;
-    // line-height: 0.7;
+    overflow-x: hidden;
   }
 
   .contact__wrapper {
