--- a/src/css/main/hero.scss
+++ b/src/css/main/hero.scss
@@ -4,10 +4,12 @@
   @include flex(flex-start, center, column);
   gap: 1.6rem;
   padding: 0 5rem;
+  overflow-x: hidden;
 
   .hero__title {
     @include flex(flex-start, flex-start, column);
     gap: 1rem;
+    overflow-x: hidden;
 
     h1 {
       @extend %title-200;
